[package]
name = "perspective1984"
version = "0.1.0"
authors = ["bs2kbs2k <10294621+bs2kbs2k@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.126"
serde_json = "1.0.64"
serenity = { version = "0.10.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
